--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
           <div class="recipe-item text-center">
             <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
+              <img src="images/清蒸鲤鱼.jpg" alt="bbq-pork-ribs" />
             </a>
             <br />
             <h3>Barbecue Pork Ribs</h3>
