--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
               <img src="images/清蒸鲤鱼.jpg" alt="bbq-pork-ribs" />
             </a>
             <br />
-            <h3>Barbecue Pork Ribs</h3>
+            <h3>清蒸鲤鱼</h3>
           </div>
         </div>
         <!-- Second recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
           <div class="recipe-item text-center">
             <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
+              <img src="images/葱爆牛肉.jpg" alt="bbq-pork-ribs" />
             </a>
             <br />
-            <h3>Barbecue Pork Ribs</h3>
+            <h3>葱爆牛肉</h3>
           </div>
         </div>
         <!-- Third recipe item -->
